DOC-1987: Added TINY-9756 to the release notes. (#2739)
* DOC-1987: Added TINY-9756 to the release notes.

* Update modules/ROOT/pages/6.5-release-notes.adoc

Co-authored-by: brian-forte <brian.forte@tiny.cloud>

* Duplicate line removed; and unmarked-up instance of ‘Advanced Templates’ marked-up.

---------

Co-authored-by: brian-forte <brian.forte@tiny.cloud>

--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -128,12 +128,17 @@ For information on the **Advanced Typography** plugin, see: xref:advanced-typogr
 
 The {productname} 6.5 release includes an accompanying release of the **Advanced Templates** premium plugin.
 
-**Advanced Templates** 1.2.0 includes the following fix.
+**Advanced Templatess** 1.2.0 includes one improvement and five fixes:
+
+=== The Advanced Template UI now provides controls for a preconfigured operations set.
+//#TINY-9756
+
+This **Advanced Templates** plugin update introduces a user interface that offers controls tailored for a predefined range of operations. This simplifies the user experience by only presenting the options relevant to the tasks at hand.
 
 === A selected item within its parent directory in tree components, did not remain selected after closing the directory
 //#TINY-9715
 
-This new release of the **Advanced Templates** plugin corrects this. It now tracks the selected leaf’s active state before and after collapsing or expanding the leaf’s parent directory. This ensures the selection state of a leaf is preserved when the leaf’s parent directory is collapsed or expanded.
+In previous versions of the **Advanced Templates** plugin, selecting a component in a leaf within its parent directory and then closing the directory caused the selection to be lost.
 
 This new release of the **Advanced Templates** plugin corrects this. It now tracks the selected leaf’s active state before and after collapsing or expanding the leaf’s parent directory.
 
