--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -30,6 +30,22 @@
 
 The following premium plugin updates were released alongside {productname} 6.5.
 
+=== Advanced Templates
+
+The {productname} 6.5 release includes an accompanying release of the **Advanced Templates** premium plugin.
+
+**Advanced Templates** 1.2.0 includes one addition:
+
+=== New `advtemplate_templates` configuration option to define an immutable list of predefined templates.
+//#TINY-9755
+
+**Advanced Templates** 1.2.0 adds the new `advtemplate_templates` configuration option.
+
+This option can set up an unchangeable list of predefined templates. It is designed for situations where the template list should remain static.
+
+Instead of setting up a persistent template store and the consequent complex plugin configuration, the `advtemplate_templates` option specifies a static templates list that can be inserted using the Templates dialog.
+
+For information on the **Advanced Templates** plugin see: xref:advtemplate_templates.adoc[Advanced Templates].
 === Accessibility Checker 3.2.0
 
 The {productname} 6.5 release includes an accompanying release of the **Accessibility Checker** premium plugin.
