--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -113,7 +113,7 @@ In {productname} 6.5, the markup was fixed by replacing the div element with a `
 
 In previous versions of {productname}, pasting content into the editor would not fire an `input` event.
 
-This is contrary to [web standards](https://developer.mozilla.org/en-US/docs/Web/API/HTMLElement/input_event), which states that an `input` event should be fired when the value of a `<textarea>` element is changed.
+This is contrary to https://developer.mozilla.org/en-US/docs/Web/API/HTMLElement/input_event[web standards], which states that an `input` event should be fired when the value of a `<textarea>` element is changed.
 
 In {productname} 6.5, a `beforeinput` event and an `input` event, both with an _insertFromPaste_ `inputType` property, are now fired in order when content is pasted into {productname}.
 
