--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -111,11 +111,19 @@ In {productname} 6.5, the markup was fixed by replacing the div element with a `
 === Saving the Table Properties dialog after changing properties unrelated to cells would overwrite cell properties set by the Cell Properties dialog.
 //#TINY-9837
 
-In previous versions of {productname}, when the user modified a field within the Table Properties dialog, upon saving, the modified change set in the Cell Properties dialog would be replaced by the corresponding properties from the Table Properties dialog, even if the latter properties were not actually changed.
+Previously, when the user modified a field within the *Table Properties* dialog, upon saving, the modified change set in the *Cell Properties* dialog would be replaced by the corresponding properties from the *Table Properties* dialog, even if the latter properties were not actually changed.
 
-For example, if the user adjusted the border width and border color of a cell using the Cell Properties dialog, then made a modification in the Table Properties dialog unrelated to those properties, such as alignment, the modified border width and color of the cell would revert to the corresponding values from the Table Properties dialog upon saving, thereby unexpectedly undoing the initial modifications in the Cell Properties dialog.
+For example, if the user
 
-In {productname} 6.5, the Table Properties dialog will continue to be the "source-of-truth" and have the ability to overwrite cell and row properties like border width and color. However, the Table Properties dialog will only overwrite those properties if they were modified in the dialog.
+* adjusted the border width and border color of a cell using the *Cell Properties* dialog; then
+
+* made a modification in the *Table Properties* dialog unrelated to those properties, such as changing a row alignment;
+
+the modified border width and color of the cell reverted to the corresponding values from the *Table Properties* dialog upon saving.
+
+This undid the initial modifications in the *Cell Properties* dialog.
+
+In {productname} 6.5, the Table Properties dialog will continue to be the *source of truth* and have the ability to overwrite cell and row properties like border width and color. However, the *Table Properties* dialog will only overwrite those properties if they were modified in the *Table Properties* dialog.
 
 
 [[security-fixes]]
