--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -570,6 +570,17 @@ In previous versions of {productname}, an issue was identified in the close butt
 
 In {productname} 6.5, the markup was fixed by replacing the div element with a `<span>` element, aligning it with HTML guidelines. As a result, the updated close buttons now pass HTML markup checkers without throwing errors.
 
+=== Pasting content into the editor did not fire `beforeinput` and `input` events.
+//#TINY-9829
+
+In previous versions of {productname}, pasting content into the editor would not fire an `input` event.
+
+This is contrary to https://developer.mozilla.org/en-US/docs/Web/API/HTMLElement/input_event[web standards], which states that an `input` event should be fired when the value of a `<textarea>` element is changed.
+
+In {productname} 6.5, a `beforeinput` event and an `input` event, both with an _insertFromPaste_ `inputType` property, are now fired in order when content is pasted into {productname}.
+
+In addition, the `beforeinput` event will also hold a `DataTransfer` object which contains the `text/html` data being pasted.
+
 === Context menus and menu items were not constrained within the scrollable container if the parent node was a Shadow root
 //#TINY-9743
 
