--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -113,7 +113,7 @@ In {productname} 6.5, the markup was fixed by replacing the div element with a `
 
 Previously, if there was a non-editable element in the text-selection, inserting or applying a bullet or numbered list to the selection failed. As a consequence, when the user pressed the insert list button while a non-editable element was included in the selection, nothing happened.
 
-For {productname} 6.5 the logic for inserting lists was updated. With this update everything within the selection — except for the non-editable element — is turned into a list.
+For {productname} 6.5 the logic for inserting lists was updated. With this update everything within the selection — except for the block element with a `contenteditable=false` attribute set — is turned into a list.
 
 [[security-fixes]]
 == Security fixes
