--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -477,6 +477,23 @@ In {productname} 6.5, the editor’s *HTML 4* schema has been corrected. Block e
 
 {productname} 6.5 also includes the following bug fixes:
 
+=== Word count was inaccurate for documents with specific characters.
+//#TINY-8122
+
+Previously, xref:wordcount.adoc[Word Count] treated some characters as separate words rather than as part of the word they were connected to. The following characters specifically:
+
+* **^**
+* **№**
+* **~**
+* **+**
+* **|**
+* **$**
+* **`**
+
+This resulted in innaccurate word counts.
+
+In {productname} 6.5, Word Count’s Unicode punctuation string has been updated to include these characters as exceptions. By doing so, the updated function more accurately count words, including the previously mishandled characters, providing a more reliable word count.
+
 === Pressing Command+Delete did not add an undo level on systems running macOS.
 //#TINY-8910
 
