--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -477,6 +477,31 @@ In {productname} 6.5, the editor’s *HTML 4* schema has been corrected. Block e
 
 {productname} 6.5 also includes the following bug fixes:
 
+=== In Safari running on iOS, Hangul characters merged into the previous line upon typing after pressing Enter.
+//#TINY-9746
+
+Previously, in Safari running on iOS, when a newline was inserted (by pressing the Enter key) and the user continued typing without moving the insertion point, the characters typed on the newline merged onto the previous line and the newline was removed.
+
+This occurred because Safari on iOS composes Hangul syllabic blocks by deleting the individual jaso glyphs and inserting the expected block glyph, continuing until a browser-native Enter `keypress` event is fired.
+
+However, {productname} has its own Enter key handler on `keydown`. In this circumstance, therefore, the native `keypress` event was suppressed. This caused Safari on iOS to continue composing the syllabic block across the newline by firing a `deleteContentBackward` input event to delete the newline and then inserting the block on the previous line.
+
+For {productname} 6.5, when the user is in Safari on iOS and the insertion point is detected as positioned after a Korean character, on Enter key `keydown`;
+
+. a bookmark is saved;
+. an undo level is added; and
+. `preventDefault` is **not** executed to still allow the browser-native Enter key `keypress` event to fire.
+
+This prompts Safari on iOS to end the syllabic block creation session for the previous character.
+
+Then, on the Enter key `keyup` event;
+
+. the effects of the native Enter key `keypress` (usually the creation of a newline) is undone;
+. the original selection is restored via the saved bookmark; and
+. the {productname}-native Enter key handler is called.
+
+This ensures that, when running in Safari on iOS, Safari no longer attempts to compose syllabic blocks across newlines, preventing the unwanted behavior from occurring.
+
 === Word count was inaccurate for documents with specific characters.
 //#TINY-8122
 
